--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-preact-ts",
   "version": "0.0.1",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --debug",
     "build": "tsc && vite build",
     "serve": "vite preview"
   },
@@ -15,6 +15,6 @@
   "devDependencies": {
     "@preact/preset-vite": "2.0.1",
     "typescript": "4.1.3",
-    "vite": "2.3.2"
+    "vite": "^2.3.6"
   }
 }
